k8sapps/k8s-cluster-deploy/hello_minikube_deploy/mini_test_ns_conf.yml
#
# Create at 2019-02-21, build namespace for test.
#
apiVersion: v1
kind: Namespace
metadata:
  name: mini-test-ns
  labels:
    name: mini-test-ns
