k8sapps/k8s-cluster-deploy/hello_minikube_deploy/echo_server_service_conf.yml
#
# Create at 2019-02-21, minikube quick start demo.
# Create byP kubectl expose deployment hello-minikube --type=NodePort -n mini-test-ns  --dry-run -o yaml > echo_server_service_conf.yml
#
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    run: hello-minikube
  name: hello-minikube
  namespace: mini-test-ns
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    run: hello-minikube
  type: NodePort
status:
  loadBalancer: {}

---
