k8sapps/k8s-cluster-deploy/hello_minikube_deploy/echo_server_ingress_conf.yml
#
# Create at 2019-02-21, build ingress network for echo server (minikube).
#
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: hello-minikube-ingress
  namespace: mini-test-ns
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: k8s.mini.test.com
    http:
      paths:
      - backend:
          serviceName: hello-minikube
          servicePort: 8080
        path: /echo/?(.*)

---
